Award Mocks as suggested by Susan
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6037 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coeus-awards-MR/aw-actions.html
+++ b/kra-coeus-awards-MR/aw-actions.html
@@ -58,11 +58,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-awards.html');return document.MM_returnValue" value="Award">
         </span></dt>
 <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-budgetversions.html');return document.MM_returnValue" value="Budget Versions">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-contacts.html');return document.MM_returnValue" value="Contacts">
         </span></dt>  <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-money-dates.html');return document.MM_returnValue" value="Money & End Dates">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-time-money.html');return document.MM_returnValue" value="Time & Money">
         </span></dt>  <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-personnel.html');return document.MM_returnValue" value="Personnel">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-payments-reports-terms.html');return document.MM_returnValue" value="Payments, Reports & Terms">
         </span></dt> <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-specialreview.html');return document.MM_returnValue" value="Special Review">
         </span></dt> <dt><span class="tabright">
@@ -240,34 +240,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </table>
             <div class="tab-container" align="center" id="G05" style="display: none;"> <<===== under construction ====>></div>
 
-            <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
-              <tr>
-                <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Summary</td>
-                <td class="tabtable1-mid1">&nbsp;</td>
-                <td class="tabtable2-mid"><a href="#" id="A02" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F02" ></a> </td>
-                <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
-              </tr>
-            </table>
-            <div class="tab-container" align="center" id="G02" style="display: none;">
-              <div class="h2-container"> <span class="subhead-left">
-                <h2>View Summary</h2>
-              </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
-			  <br><br><img src="images/aw-summary.jpg" alt="" width="957" height="536">
-            </div>
-            <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
-              <tr>
-                <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">History</td>
-                <td class="tabtable1-mid1">&nbsp;</td>
-                <td class="tabtable2-mid"><a href="#" id="A03" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F03" vspace=6></a> </td>
-                <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
-              </tr>
-            </table>
-            <div class="tab-container" align="center" id="G03" style="display: none;">
-              <div class="h2-container"> <span class="subhead-left">
-                <h2>View History</h2>
-              </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
-			<br><br><img src="images/aw-history.jpg" alt="history" width="933" height="513">  
-            </div>
+           
             <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
               <tr>
                 <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Print</td>
