--- a/kra-coeus-awards-MR/aw-time-money.html
+++ b/kra-coeus-awards-MR/aw-time-money.html
@@ -165,11 +165,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <tr>
               <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Cost Sharing</td>
               <td class="tabtable1-mid1">&nbsp;</td>
-              <td class="tabtable2-mid"><a href="#" id="A125" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F125" ></a> </td>
+              <td class="tabtable2-mid"><a href="#" id="A225" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F225" ></a> </td>
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
           </table>
-          <div class="tab-container" align="center" id="G125" style="display: none;">
+          <div class="tab-container" align="center" id="G225" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2>Label</h2>
               </span><span class="subhead-right"> <span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
@@ -222,11 +222,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <tr>
               <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Indirect Cost</td>
               <td class="tabtable1-mid1">&nbsp;</td>
-              <td class="tabtable2-mid"><a href="#" id="A03" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F03" ></a> </td>
+              <td class="tabtable2-mid"><a href="#" id="A31" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F31	" ></a> </td>
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
           </table>
-          <div class="tab-container" align="center" id="G03" style="display: none;">
+          <div class="tab-container" align="center" id="G31" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
               <h2>Label</h2>
               </span><span class="subhead-right"> <span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
@@ -332,6 +332,34 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </tr>
             </table>
           </div>
+		   <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+              <tr>
+                <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Summary</td>
+                <td class="tabtable1-mid1">&nbsp;</td>
+                <td class="tabtable2-mid"><a href="#" id="A22" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F22" ></a> </td>
+                <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
+              </tr>
+            </table>
+            <div class="tab-container" align="center" id="G22" style="display: none;">
+              <div class="h2-container"> <span class="subhead-left">
+                <h2>View Summary</h2>
+              </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
+			  <br><br><img src="images/aw-summary.jpg" alt="" width="957" height="536">
+            </div>
+            <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+              <tr>
+                <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">History</td>
+                <td class="tabtable1-mid1">&nbsp;</td>
+                <td class="tabtable2-mid"><a href="#" id="A03" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F03" vspace=6></a> </td>
+                <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
+              </tr>
+            </table>
+            <div class="tab-container" align="center" id="G03" style="display: none;">
+              <div class="h2-container"> <span class="subhead-left">
+                <h2>View History</h2>
+              </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
+			<br><br><img src="images/aw-history.jpg" alt="history" width="933" height="513">  
+            </div>
           <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
               <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Preaward</td>
