--- a/kra-coeus-awards-MR/aw-time-money.html
+++ b/kra-coeus-awards-MR/aw-time-money.html
@@ -114,53 +114,15 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <!-- TAB -->
           <div class="tab-container" align="center" id="G02" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
-              <h2>Label</h2>
-              </span><span class="subhead-right"> <span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
-            <table cellpadding=0 cellspacing="0" summary="view/edit ad hoc recipients">
-              <tr>
-                <th scope=col>&nbsp;</th>
-                <th scope=col>&nbsp;</th>
-                <th scope=col>&nbsp;</th>
-                <th scope=col>&nbsp;</th>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td class="infoline">&nbsp;</td>
-                <td class="infoline">&nbsp;</td>
-                <td class="infoline">&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-            </table>
-          </div>
+              <h2>Money & End Dates</h2>
+              </span><span class="subhead-right"> <span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div><br><br>
+         <h1>Total</h1>
+		 <img src="images/aw-money&dates-total.jpg"><br><br>
+		 <h1>Distributed</h1>
+		 <img src="images/aw-money&dates-distributed.jpg"><br><br>
+		 <h1>Distributable</h1>
+		 <img src="images/aw-money&dates-distributable.jpg"><br>
+		 </div>
           <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
               <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Cost Sharing</td>
@@ -171,52 +133,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </table>
           <div class="tab-container" align="center" id="G225" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
-              <h2>Label</h2>
-              </span><span class="subhead-right"> <span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
-            <table cellpadding=0 cellspacing="0" summary="view/edit ad hoc recipients">
-              <tr>
-                <th scope=col>&nbsp;</th>
-                <th scope=col>&nbsp;</th>
-                <th scope=col>&nbsp;</th>
-                <th scope=col>&nbsp;</th>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td class="infoline">&nbsp;</td>
-                <td class="infoline">&nbsp;</td>
-                <td class="infoline">&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-            </table>
+              <h2>Cost Sharing</h2>
+              </span><span class="subhead-right"> <span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div><br><br>
+			  <img src="images/aw-cost-sharing.jpg">
           </div>
           <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
@@ -228,52 +147,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </table>
           <div class="tab-container" align="center" id="G31" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
-              <h2>Label</h2>
-              </span><span class="subhead-right"> <span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
-            <table cellpadding=0 cellspacing="0" summary="view/edit ad hoc recipients">
-              <tr>
-                <th scope=col>&nbsp;</th>
-                <th scope=col>&nbsp;</th>
-                <th scope=col>&nbsp;</th>
-                <th scope=col>&nbsp;</th>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td class="infoline">&nbsp;</td>
-                <td class="infoline">&nbsp;</td>
-                <td class="infoline">&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-            </table>
+              <h2>Indirect Cost</h2>
+              </span><span class="subhead-right"> <span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div><br><br>
+			  <img src="images/aw-indirect-cost.jpg">
           </div>
           <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
@@ -285,54 +161,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </table>
           <div class="tab-container" align="center" id="G4" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
-              <h2>Label</h2>
-              </span><span class="subhead-right"> <span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
-            <table cellpadding=0 cellspacing="0" summary="view/edit ad hoc recipients">
-              <tr>
-                <th scope=col>&nbsp;</th>
-                <th scope=col>&nbsp;</th>
-                <th scope=col>&nbsp;</th>
-                <th scope=col>&nbsp;</th>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td class="infoline">&nbsp;</td>
-                <td class="infoline">&nbsp;</td>
-                <td class="infoline">&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-            </table>
+              <h2>Special Rate</h2>
+              </span><span class="subhead-right"> <span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div><br><br>
+			  <img src="images/aw-special-rates.jpg">
           </div>
-		   <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+          <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
               <tr>
                 <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Summary</td>
                 <td class="tabtable1-mid1">&nbsp;</td>
@@ -370,52 +203,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </table>
           <div class="tab-container" align="center" id="G14" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
-              <h2>Label</h2>
-              </span><span class="subhead-right"> <span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
-            <table cellpadding=0 cellspacing="0" summary="view/edit ad hoc recipients">
-              <tr>
-                <th scope=col>&nbsp;</th>
-                <th scope=col>&nbsp;</th>
-                <th scope=col>&nbsp;</th>
-                <th scope=col>&nbsp;</th>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td class="infoline">&nbsp;</td>
-                <td class="infoline">&nbsp;</td>
-                <td class="infoline">&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <th scope=row>&nbsp;</th>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-            </table>
+              <h2>Preaward</h2>
+              </span><span class="subhead-right"> <span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div><br><br><img src="images/aw-Preaward.jpg">
           </div>
           <table width="100%" border="0" cellpadding="0" cellspacing="0" class="b3" summary="">
             <tr>
